changed some initial classes to IDs instead

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,11 +17,11 @@ header {
     text-align: center;
 }
 
-.questions {
+.questionsDefault {
     max-width: 600px;
 }
 
-.answers {
+.answersDefault {
     max-width: 600px;
 }
 
