added more classes, once that will disply default and will hide, and ones that are hidden by default and will be where the questions/asnwers are displayed/

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,15 @@ header {
     max-width: 600px;
 }
 
+.questionsDisplay {
+    max-width: 600px;
+    display:hidden;
+}
+
+.answersDisplay {
+    max-width: 600px;
+}
+
 .confirm {
     text-align: center;
 }
