figuring out the proper way to show and hide stuff with CSS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,21 +17,22 @@ header {
     text-align: center;
 }
 
-.questionsDefault {
+#questionsDefault {
     max-width: 600px;
 }
 
-.answersDefault {
+#answersDefault {
     max-width: 600px;
 }
 
-.questionsDisplay {
+#questionsDisplay {
     max-width: 600px;
-    display:hidden;
+    display:none
 }
 
-.answersDisplay {
+#answersDisplay {
     max-width: 600px;
+    display:none
 }
 
 .confirm {
